--- a/src/main/resources/templates/authorized.html
+++ b/src/main/resources/templates/authorized.html
@@ -72,8 +72,7 @@
         <a class="btn btn-primary" th:href="@{/crud}">Ejecutar Acci&oacute;n </a>
     </div>
     <div class="text-center">
-        <div>Este es el codigo recibido</div>
-        <h2 th:text="${param.code}"></h2>
+        <div>Se ha inciado sesi&oacute;n correctamente</div>
     </div>
 </div>
 </body>
