--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -69,7 +69,7 @@
 <div class="container">
   <h1 class="text-center">Bienvenido al Incio </h1>
   <div class="text-center">
-    <a class="btn btn-primary" th:href="@{/crud}">Botón ejemplo </a>
+    <a class="btn btn-primary" th:href="@{/admin}">Ingresar a la p&aacute;gina de administraci&oacute;n </a>
   </div>
 </div>
 </body>
